# Small-Projects

./: README.md
games/chess/: board.cpp  main.cpp
games/chess/documents/: plan.md  to_do.md
games/chess/pieces/: pawn.cpp  piece.cpp
java-projects/: pi.java
numbers/: alarm.cpp  binary_decimal_converter.cpp  calculator.cpp  change_return.cpp  city_distance.cpp  credit_card_validator.cpp  dijkstra.cpp  fibonacci.java  floor_tile_cost.cpp  mortgage_calculator.cpp  next_prime_number.cpp  pi.java  piglatin.cpp  prime_factorization.java  tax_calculator.cpp  unit_converter_temperature.cpp
random_python/: qr_code,py
text/: check_palindrome.cpp  count_vowels.cpp  count_words.cpp  reverse_string.cpp
text/rss_feed/: rss_feed.cpp
text/text-editor/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
